Squashed commit of the following:
commit f3dd6eeeb0abe76f3ebfe84b2d3cb6daac81a02a
Author: Maxim Zimaliev <zimaliev@gmail.com>
Date:   Thu Oct 29 23:10:56 2015 +0300

    comments

commit 9063703a243c11a808273802f4f763a053608bd6
Author: Maxim Zimaliev <zimaliev@gmail.com>
Date:   Thu Oct 29 23:07:44 2015 +0300

    Squashed commit of the following:

    commit ac81d554e444a4fcf453226e71cea7a73a9955c5
    Author: Maxim Zimaliev <zimaliev@gmail.com>
    Date:   Thu Oct 29 23:07:09 2015 +0300

        comments

    commit d0dac235be5bc1388cfec7405380f15881fd8bce
    Author: Maxim Zimaliev <zimaliev@gmail.com>
    Date:   Thu Oct 29 22:46:58 2015 +0300

        Update to new version of halogen.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 node_modules/
 bower_components/
 output/
-
+/tmp/
+/dist/
+/output/
+/coverage/
+public/*.js
+!public/echarts-all.js
+.psci_modules
+.psci
