--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,5 @@
 {
   "name": "purescript-halogen-echarts",
-  "version": "1.0.0",
   "moduleType": [
     "node"
   ],
@@ -11,7 +10,18 @@
     "output"
   ],
   "dependencies": {
-    "purescript-halogen": "master",
-    "purescript-echarts": "*"
+    "purescript-halogen": "^0.5.3",
+    "purescript-echarts": "^0.4.0",
+    "purescript-halogen-css": "^0.1.1",
+    "purescript-datetime": "^0.9.0",
+    "purescript-random": "^0.2.2",
+    "purescript-refs": "^0.2.0",
+    "purescript-maps": "^0.5.2",
+    "purescript-transformers": "^0.8.1"
+  },
+  "devDependencies": {
+    "purescript-generics": "^0.6.2",
+    "purescript-random": "^0.2.2",
+    "purescript-debug": "^0.1.2"
   }
 }
