--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
 language: node_js
-node_js:
-  - 0.12
+dist: trusty
+sudo: required
+node_js: 5
 install:
-  - npm install bower gulp -g
-  - npm install && bower install
+  - npm install
+  - npm install -g bower
+  - bower install
 script:
-  - gulp
+  - npm run example
+after_success:
+- >-
+  test $TRAVIS_TAG &&
+  node_modules/.bin/psc-publish > .pursuit.json &&
+  curl -X POST http://pursuit.purescript.org/packages \
+    -d @.pursuit.json \
+    -H 'Accept: application/json' \
+    -H "Authorization: token ${GITHUB_TOKEN}"
