--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf output && rimraf .pulp-cache",
-    "build": "pulp build",
+    "build": "pulp build --censor-lib --strict",
     "example": "pulp browserify --include example/src --to example/dist/test.js"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
   "devDependencies": {
     "pulp": "^8.1.0",
     "purescript": "^0.8.5",
+    "purescript-psa": "^0.3.8",
     "rimraf": "^2.5.2"
   }
 }
