--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-echarts": "^2.0.0",
+    "purescript-echarts": "monad",
     "purescript-halogen": "^0.11.0",
     "purescript-halogen-css": "^3.0.0"
   },
