--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,8 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-halogen": "^0.12.0",
-    "purescript-halogen-css": "^4.0.0",
+    "purescript-halogen": "^1.0.0-rc.2",
+    "purescript-halogen-css": "^5.0.0-rc.1",
     "purescript-echarts": "^3.0.0"
   },
   "devDependencies": {
