--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf output .pulp-cache example/dist/test.js",
-    "build": "pulp build --censor-lib --strict",
+    "build": "pulp build -- --censor-lib --strict",
     "example": "npm run clean && pulp browserify --include example/src --to example/dist/test.js"
   },
   "dependencies": {
-    "pulp": "^9.0.1",
-    "purescript": "^0.10.1",
-    "purescript-psa": "^0.3.9"
+    "pulp": "^10.0.0",
+    "purescript": "^0.10.5",
+    "purescript-psa": "^0.4.0"
   },
   "devDependencies": {
-    "virtual-dom": "^2.1.1",
-    "echarts": "^3.3.1"
+    "echarts": "^3.4.0"
   }
 }
